# nsg-audit-tool

./: .gitignore  LICENSE  README.md  pyproject.toml
src/nsg_audit_tool/: checks.py  cli.py
tests/: test_checks.py  test_cli.py
